@@ -26,6 +26,9 @@ release 0.7 (2008-04-18)
     if/when MessageBodyWorkers supports the same functionality.
   - javax.ws.rs.ext.ContextResolver replaces
     com.sun.ws.rest.spi.service.ContextResolver (which has been removed).
+  - javax.ws.rs.core.ApplicationConfig is the abstract base class of
+    com.sun.ws.rest.api.core.ResourceConfig.
+    ResourceConfig has changed from an interface to an abstract class.
 
 release 0.6.1 (2008-03-18)
 - Support for xml attributes serialization/deserialization in JSON added
